# libwebm-js

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  package-lock.json  package.json  quick-start.sh  test_vector.js
.github/workflows/: build.yaml  pages.yaml
demo/: README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
demo/public/samples/: audio.opus  av1-opus.webm  sample.webm
demo/src/: App.tsx  main.tsx  test-parser.js  vite-env.d.ts
demo/src/components/: FrameExtractor.tsx  FrameExtractor.tsx.backup  MuxerDemo.tsx  PerformanceTester.tsx  TrackInfoDisplay.tsx  WebMFileParser.tsx  index.ts
demo/src/styles/: heroui-plugin.ts  index.css
examples/: basic-usage.js
src/: index.ts  libwebm-bindings.cpp  wrapper-worker.js  wrapper.js
test/: README-worker-tests.md  cloudflare-worker-tests.js  libwebm-tests.js  run-worker-tests.js  structure-test.js  test-frame-extraction.js  webclient.webm  worker-environment-tests.js  worker-test-runner.html
